// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnLayout renders correctly for 2 columns 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > * {
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
}

<div
  className="c0"
>
  <p>
    hello
  </p>
  <p>
    world
  </p>
</div>
`;

exports[`ColumnLayout renders correctly for 4 columns 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > * {
  -webkit-flex-basis: 25%;
  -ms-flex-preferred-size: 25%;
  flex-basis: 25%;
}

<div
  className="c0"
>
  <p>
    hello
  </p>
  <p>
    world
  </p>
  <p>
    1
  </p>
  <p>
    2
  </p>
</div>
`;

exports[`Storyshots ColumnLayout with 2 columns 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > * {
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
}

<div
  className="c0"
>
  <p>
    hello
  </p>
  <p>
    world
  </p>
</div>
`;

exports[`Storyshots ColumnLayout with 2 videos 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > * {
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
}

<div
  className="c0"
>
  <video
    controls=""
    poster="//d166gs6ce8o9t3.cloudfront.net/Tenet_Corp.jpg"
  >
    <source
      src="//d166gs6ce8o9t3.cloudfront.net/Tenet_Corp.mp4"
      type="video/mp4"
    />
    <source
      src="//d166gs6ce8o9t3.cloudfront.net/Tenet_Corp.webm"
      type="video/webm"
    />
  </video>
  <video
    controls=""
    poster="//d166gs6ce8o9t3.cloudfront.net/Tenet_Corp.jpg"
  >
    <source
      src="//d166gs6ce8o9t3.cloudfront.net/Tenet_Corp.mp4"
      type="video/mp4"
    />
    <source
      src="//d166gs6ce8o9t3.cloudfront.net/Tenet_Corp.webm"
      type="video/webm"
    />
  </video>
</div>
`;

exports[`Storyshots ColumnLayout with 3 columns 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 > * {
  -webkit-flex-basis: 33.333333333333336%;
  -ms-flex-preferred-size: 33.333333333333336%;
  flex-basis: 33.333333333333336%;
}

<div
  className="c0"
>
  <p>
    hello
  </p>
  <p>
    world
  </p>
  <p>
    3rd column
  </p>
</div>
`;

exports[`Storyshots Panel max width of 1200 1`] = `
@media (min-width:75em) {
  .c0 {
    padding-left: calc(50vw - 37.5em);
    padding-right: calc(50vw - 37.5em);
  }
}

<section
  className="c0"
>
  <p>
    hello
  </p>
  <p>
    world
  </p>
</section>
`;

exports[`Storyshots Panel max width of 1200, background color black, font color white 1`] = `
.c0 {
  background-color: black;
  color: white;
}

@media (min-width:75em) {
  .c0 {
    padding-left: calc(50vw - 37.5em);
    padding-right: calc(50vw - 37.5em);
  }
}

<section
  className="c0"
>
  <p>
    hello
  </p>
  <p>
    world
  </p>
</section>
`;

exports[`Storyshots Panel max width of 1200, background color blue 1`] = `
.c0 {
  background-color: lightblue;
}

@media (min-width:75em) {
  .c0 {
    padding-left: calc(50vw - 37.5em);
    padding-right: calc(50vw - 37.5em);
  }
}

<section
  className="c0"
>
  <p>
    hello
  </p>
  <p>
    world
  </p>
</section>
`;

exports[`Storyshots Panel max width of 1200, background image 1`] = `
.c0 {
  display: grid;
}

.c0 > img {
  grid-column: 1 / -1;
  grid-row: 1 / -1;
  width: 100vw;
  max-width: none;
}

.c0 > .content-container {
  grid-column: 1 / -1;
  grid-row: 1 / -1;
}

@media (min-width:75em) {
  .c0 {
    padding-left: calc(50vw - 37.5em);
    padding-right: calc(50vw - 37.5em);
  }
}

@media (min-width:75em) {
  .c0 > img {
    margin-left: calc((50vw - 37.5em) * -1);
    margin-right: calc((50vw - 37.5em) * -1);
  }
}

<section
  backgroundImage={true}
  className="c0"
>
  <img
    alt="placeholder"
    src="https://via.placeholder.com/1200x480"
  />
  <div
    className="content-container"
  >
    <p>
      hello
    </p>
    <p>
      world
    </p>
  </div>
</section>
`;
